--- a/app/components/modal_component.html.erb
+++ b/app/components/modal_component.html.erb
@@ -1,3 +1,19 @@
-<%= turbo_frame_tag :modal do %>
-  <p>Modal Component</p>
+<%= turbo_frame_tag "modal" do %>
+  <div data-controller="modal"
+     data-modal-target="overlay"
+     class="fixed inset-0 bg-black/50 z-[9998] flex items-center justify-center modal close-modal"
+     data-action="click->modal#close">
+    <!-- Modal Container -->
+    <div class="bg-white rounded-lg shadow-lg w-full max-w-md p-6 relative z-[9999]">
+      <!-- Close Button -->
+      <button data-action="click->modal#close"
+        class="absolute top-3 right-3 text-gray-500 hover:text-gray-700 close-modal">
+        &times;
+      </button>
+      <!-- Modal Header -->
+      <h2 class="text-xl font-semibold text-gray-900"><%= @title %></h2>
+      <!-- Modal Body -->
+      <%= content %>
+    </div>
+  </div>
 <% end %>
